# vala-lib-example

./: README.md
app-consumer/: app.vala  meson.build
lib-producer/: Library.vala  meson.build
